added a disconnected icon so that it looks different if you're browsing
messages in connected vs. disconnected imap.

updated the NewAccountPooka so that you can set a better variety of choices
during setup.

added ssl support for pop3 folders.

added Add buttons to many of the list choices in the configuration editors.
makes it a lot easier to add all of the items that you want in the correct
order.

made the VariableEditorPane change within the editor instead of 
popping up a new window.

made it so by default the ssl seeding is done with /dev/urandom instead of
using the very very slow seeding that SecureRandom uses.  this speeds
up initial ssl connections by a huge factor.

020703 release
--------------

fixed a bug which prevented you from deleting a message from a 
disconnected folder.

in preview pane mode, when you open up a folder, the keyboard focus now
shifts to the message table.

added a progress dialog to caching multiple messages during disconnected
operation.  

changed the sorting method on the message tables.  now clicking a column
a second time will reverse the sort on that column.  doing a shift+click
will still explicitly do a reverse sort.

added an option to preview pane mode in which we don't auto-preview
the selected message.  hitting space or enter now previews the messages.
also added an option not to automatically select the first unread message.
these options are useful for situations in which a person doesn't want a
new message read automatically on folder load.

added keybindings for lots of stuff, including searches, printing, selecting
the next unread message, etc.  added a page showing the keybindings, 
available through the help menu or by pressing Alt-K.

fixed the keybindings on top-level message frames.  those should work now.

selecting a NewMessageWindow now selects either the to: field, the subject:
field, or the text body, depending on which ones are filled out.
